--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -1,17 +1,31 @@
-# Learn more → https://github.com/TryGhost/action-deploy-theme#getting-started
 name: Deploy Theme
+
 on:
   push:
-    branches:
-      - master
-      - main
+    branches: [ master, main ]
+
 jobs:
   deploy:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Deploy Ghost Theme
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'          # speeds up repeat runs massively
+
+      - name: Install dependencies
+        run: npm ci                # reproducible & fast, never use npm install in CI
+
+      - name: Build assets with Vite
+        run: npm run build         # if your script is just "vite build", change to: npx vite build
+
+      - name: Deploy to Ghost
         uses: TryGhost/action-deploy-theme@v1
         with:
           api-url: ${{ secrets.GHOST_ADMIN_API_URL }}
           api-key: ${{ secrets.GHOST_ADMIN_API_KEY }}
+          # optional but recommended if you have big src/ or config files
+          # exclude: "src/** node_modules/** *.config.* tailwind.config.* postcss.config.* *.md .editorconfig"
